# grocy-py

./: .github_changelog_generator  .gitignore  .pre-commit-config.yaml  README.md  RELEASE_GUIDE.md  mkdocs.yml  pyproject.toml  stackaid.json  taskfile.yml  tox.ini
.github/: no-response.yml
docs/: example.ipynb  getting-started.md  index.md
docs/reference/: api-responses.md  enums.md  errors.md  grocy.md
docs/reference/managers/: batteries.md  calendar.md  chores.md  chores_log.md  equipment.md  files.md  generic.md  meal_plan.md  recipes.md  shopping_list.md  stock.md  system.md  tasks.md  users.md
docs/reference/models/: battery.md  chore.md  chore_log.md  equipment.md  meal_plan.md  product.md  system.md  task.md  user.md
grocy/: __init__.py  grocy.py  grocy_api_client.py
grocy/data_models/: battery.py  chore.py  equipment.py  generic.py  meal_items.py  product.py  system.py  task.py  user.py
grocy/errors/: grocy_error.py
grocy/managers/: calendar.py  chores_log.py  equipment.py  files.py  generic.py  meal_plan.py  recipes.py  stock.py  system.py  users.py
pygrocy2/data_models/: equipment.py
test/: conftest.py  test_battery.py  test_chores.py  test_equipment.py  test_generic.py  test_grocy.py  test_grocy_api_client.py  test_meal_plan.py  test_meal_plan_sections.py  test_misc.py  test_product.py  test_product_groups.py  test_shoppinglist.py  test_stock.py  test_system.py  test_tasks.py  test_users.py  test_utils.py
test/cassettes/test_users/: TestUsers.test_get_user_by_id_valid.yaml
