[project]
name = "pygrocy2"
version = "2.5.0"
authors = [
    { name = "George Green", email = "iamkarlson@gmail.com" }]
dependencies = ["requests", "deprecation~=2.1.0", "pydantic~=2.12.2"]
[dependency-groups]
dev = [
    "responses~=0.21.0",
    "pre-commit",
    "isort",
    "pytest",
    "pytest-cov",
    "vcrpy",
    "pytest-recording",
    "pytest-mock",
    "urllib3==2.2.3",
]

[tool.uv]
package = false
